Show Booking half comeplete

--- a/client/main.less
+++ b/client/main.less
@@ -58,8 +58,12 @@
 @import '{}/imports/ui/stylingsheets/profile.less';
 @import '{}/imports/ui/stylingsheets/fullcalendar.less';
 @import '{}/imports/ui/stylingsheets/calendar.less';
+@import '{}/imports/ui/stylingsheets/seating.less';
 @light-grey: rgb(236, 235, 234);
-@primary-dark: #43A047;
+@primary: #11998e;
+@primary-dark: #00796B;
+@primary-really-dark: #004D40;
+@primary-gradient: linear-gradient(to right, #11998e, #38ef7d);
 *{
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
