--- a/imports/ui/stylingsheets/seating.less
+++ b/imports/ui/stylingsheets/seating.less
@@ -63,6 +63,9 @@ div.seatCharts-row {
 		height: 0;
 	}
 }
+.smaller{
+	width: 50%;
+}
 div.seatCharts-seat.available {
 	background-color: #B9DEA0;
 
@@ -126,7 +129,7 @@ span.seatCharts-legendDescription {
 	text-align: left;
 	margin-right: 10px;
 	.select2{
-		width: 100% !important;
+		width: 100%;
 		font-size: 14px;
 	}
 	.select2-container--default .select2-selection--single{
@@ -175,4 +178,7 @@ span.seatCharts-legendDescription {
 		font-size: 26px;
 		cursor: pointer;
 	}
+}
+.center-input{
+	text-align: center !important;
 }
