booking platform 30% completed, fix login

--- a/imports/ui/stylingsheets/dash.less
+++ b/imports/ui/stylingsheets/dash.less
@@ -171,7 +171,7 @@ div.seatCharts-seat:focus {
 */
 
 div.seatCharts-space {
-	background-color: white;
+	background-color: #e9ebee;
 }
 div.seatCharts-row {
 	height: 50px;
