--- a/client/main.less
+++ b/client/main.less
@@ -59,6 +59,7 @@
 @import '{}/imports/ui/stylingsheets/fullcalendar.less';
 @import '{}/imports/ui/stylingsheets/calendar.less';
 @import '{}/imports/ui/stylingsheets/seating.less';
+@import '{}/imports/ui/stylingsheets/adminNav.less';
 @light-grey: rgb(236, 235, 234);
 @primary: #11998e;
 @primary-dark: #00796B;
@@ -93,22 +94,6 @@ h4{
 p{
   font-size: 18px;
   word-wrap: break-word;
-}
-a{
-  background-color: transparent;
-  color: inherit;
-  text-decoration: none;
-  -webkit-transition: background .15s cubic-bezier(0.33, 0.66, 0.66, 1);
-  transition: background .15s cubic-bezier(0.33, 0.66, 0.66, 1);
-  border-bottom: 3px solid #b4f8b8;
-  -webkit-box-shadow: inset 0 -4px 0 #b4f8b8;
-  box-shadow: inset 0 -4px 0 #b4f8b8;
-  overflow-wrap: break-word;
-  &:hover, &:active , &:focus{
-    text-decoration: none;
-    background-color: #b4f8b8;
-    color: #000;
-  }
 }
 .link-sm{
   border-bottom: 2px solid #b4f8b8;
