more works on the booking system is done

--- a/client/main.less
+++ b/client/main.less
@@ -60,6 +60,7 @@
 @import '{}/imports/ui/stylingsheets/calendar.less';
 @import '{}/imports/ui/stylingsheets/seating.less';
 @import '{}/imports/ui/stylingsheets/adminNav.less';
+@import '{}/imports/ui/stylingsheets/animate.less';
 @light-grey: rgb(236, 235, 234);
 @primary: #11998e;
 @primary-dark: #00796B;
