--- a/imports/ui/stylingsheets/buttons.less
+++ b/imports/ui/stylingsheets/buttons.less
@@ -217,3 +217,26 @@ input[type="checkbox"].ios8-switch-lg:checked + label:after {
 select{
   width: 100%;
 }
+
+.bigInput{
+  border: none;
+  border-radius: 6px;
+}
+
+.search input {
+  background: #fff;
+  border-radius: 5px;
+  font-size: 20px;
+  font-family: 'Roboto Mono', monospace;
+  box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
+}
+.btn-full{
+  width: 100%;
+  padding: 30px;
+}
+.search .fa-search { 
+  position: absolute;
+  bottom: 32px;
+  left: 30px;
+  font-size: 20px;
+}
