--- a/imports/ui/components/navigation.html
+++ b/imports/ui/components/navigation.html
@@ -60,17 +60,10 @@
                 <a href="/">Go Back</a>
             {{else}}
                 {{#if booking}}
-                    <a href="/dashboard"><i class="fa fa-home"></i> Dashboard</a>
-                    <a href="/dashboard/announcements"><i class="fa fa-bullhorn"></i> Create New Show</a>
-                    <a href="/dashboard/suggestions"><i class="fa fa-pencil-square-o"></i> Ticket Sellers</a>
-                    <a href="/dashboard/categories"><i class="fa fa-list"></i> Leaderboard</a>
-                    <a href="" id="academics"><div class="expand-text"> Shows</div><i class="fa fa-times academics-icon"></i></a>
-                        <ul class="course-list">
-                            <li><a href="" class="course-link">Show A</a></li>
-                            <li><a href="" class="course-link">Show B</a></li>
-                            <li><a href="" class="course-link">Show C</a></li>
-                            <li><a href="" class="course-link">Show D</a></li>
-                        </ul>
+                    <a href="/booking-admin"><i class="fa fa-home"></i> Dashboard</a>
+                    <a href="" id="openShowCreation"><i class="fa fa-bullhorn"></i> Create New Show</a>
+                    <a href="/booking-admin/sellers"><i class="fa fa-pencil-square-o"></i> Ticket Sellers</a>
+                    <a href="/booking-admin/leaderboard"><i class="fa fa-list"></i> Leaderboard</a>
                     <a href=""><i class="fa fa-gear"></i> Settings</a>
                     <a href="/">Go Back</a>
                 {{else}}
