--- a/imports/ui/stylingsheets/seating.less
+++ b/imports/ui/stylingsheets/seating.less
@@ -25,6 +25,9 @@
 		background-color: transparent;
 	}
 }
+.seating{
+	border-radius: 5px;
+}
 textarea{
 	width: 100%;
  	resize: none;
@@ -72,6 +75,25 @@ textarea{
 	height: 100vh;
 	right: 0;
 	text-align: left;
+	position: fixed;
+	transition: all 0.5s;
+	h2 {
+		margin: 25px 0 20px 0;
+		font-size: 50px;
+	}
+	h3 {
+		margin: 5px 5px 0 0;
+		font-size: 25px;
+	}
+}
+.booking-functions {
+	padding: 25px;
+	width: 15%;
+	background: #fff;
+	box-shadow: 0 15px 35px rgba(50,50,93,.1), 0 5px 15px rgba(0,0,0,.07);
+	height: 100vh;
+	left: 0;
+	text-align: center;
 	position: fixed;
 	transition: all 0.5s;
 	h2 {
